--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE>
 <html lang="en-US">
     <head>
-        <title>PyMRCE - Open Community for UnderGrad & Pythonista's</title>
+        <title>PyMRCE - Open Community for UnderGraduate Pythonistas</title>
         <meta charset="utf-8">
         <meta name="author" content="DZ">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
